engine-net-2/examples/Errors/IndexTwoDifferentIndexNames.grs
new graph "Rules.grg"

exec for{v:N in {ascending(idx>7,idx2<42)}; true}

quit
